--- a/README.org
+++ b/README.org
@@ -213,11 +213,13 @@ Use position registers (a sort of bookmark) with ~F1—F4~: ~C-F1~ to
 * To-do
 
 - Flycheck
-- R not recognized in Rmd
-- R indentation
-- Set up Polymode for R (weave/tangle/export, previous/next chunk)
+- R:
+  - indentation to follow R parser
+  - Set up Polymode for R (weave/tangle/export, previous/next chunk)
+  - hs-org/minor-mode not working
+  - Document ESS
 - Integrate Markdown-toc (bug)
-- Document PDF-tools, ESS, LaTeX (document path to main biblio)
+- Document PDF-tools, LaTeX (document path to main biblio)
 - Configure Org mode
 - Configure SQL mode
 - Additional functions
