--- a/init.org
+++ b/init.org
@@ -82,6 +82,7 @@ repositories. We first list these packages:
                        ess-smart-underscore
                        expand-region
                        flx-ido
+                       format-sql
                        hideshow-org
                        highlight 
                        highlight-indent-guides
@@ -101,6 +102,8 @@ repositories. We first list these packages:
                        org-bullets
                        powerline
                        smex
+                       sql-indent
+                       sqlup-mode
                        toc-org
                        web-mode
                        yaml-mode
@@ -1103,48 +1106,118 @@ prepare packages. ESS is simply loaded with:
 
 ** SQL
 
-# ;; SQL (sql-indent + sqlup)
-# ;;
-# (use-package sql-indent
-# 	     :config
-# 	     (progn
-# 	       ;; Capitalize keywords in SQL mode
-# 	       (add-hook 'sql-mode-hook 'sqlup-mode)
-# 	       ;; Capitalize keywords in an interactive session (e.g. psql)
-# 	       (add-hook 'sql-interactive-mode-hook 'sqlup-mode)
-# 	       ;; Set a global keyword to use sqlup on a region
-# 	       (global-set-key (kbd "C-c u") 'sqlup-capitalize-keywords-in-region)
-# 	       ;; SQL indentation using TAB
-# 	       (load-library "sql-indent")))
+[[https://github.com/bsvingen/sql-indent][sql-indent]]
 
-# ;; ;; Add a newline before comint output:
-# ;; ;; http://emacswiki.org/emacs/SqlMode#toc2
-# ;; (defvar sql-last-prompt-pos 1
-# ;;   "position of last prompt when added recording started")
-# ;; (make-variable-buffer-local 'sql-last-prompt-pos)
-# ;; (put 'sql-last-prompt-pos 'permanent-local t)
-# ;; (defun sql-add-newline-first (output)
-# ;;   "Add newline to beginning of OUTPUT for `comint-preoutput-filter-functions'
-# ;; This fixes up the display of queries sent to the inferior buffer
-# ;; programatically."
-# ;;   (let ((begin-of-prompt
-# ;; 	     (or (and comint-last-prompt-overlay
-# ;; 		      ;; sometimes this overlay is not on prompt
-# ;; 		      (save-excursion
-# ;; 			(goto-char (overlay-start comint-last-prompt-overlay))
-# ;; 			(looking-at-p comint-prompt-regexp)
-# ;; 			(point)))
-# ;; 		 1)))
-# ;; 	(if (> begin-of-prompt sql-last-prompt-pos)
-# ;; 	    (progn
-# ;; 	      (setq sql-last-prompt-pos begin-of-prompt)
-# ;; 	      (concat "\n" output))
-# ;; 	  output)))
-# ;; (defun sqli-add-hooks ()
-# ;;   "Add hooks to `sql-interactive-mode-hook'."
-# ;;   (add-hook 'comint-preoutput-filter-functions
-# ;; 		'sql-add-newline-first))
-# ;; (add-hook 'sql-interactive-mode-hook 'sqli-add-hooks)
+#+BEGIN_SRC emacs-lisp
+  (with-eval-after-load 'sql (load-library "sql-indent"))
+#+END_SRC
+
+[[https://github.com/Trevoke/sqlup-mode.el][SQL-up]]
+
+Capitalize keywords in SQL mode
+Capitalize keywords in an interactive session (e.g. psql)
+sqlup on a region set to C-c u
+
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'sql-mode-hook 'sqlup-mode)
+  (add-hook 'sql-interactive-mode-hook 'sqlup-mode)
+  (add-hook 'sql-mode-hook
+            '(lambda ()
+               (local-set-key (kbd "C-c u") 'sqlup-capitalize-keywords-in-region)))
+#+END_SRC
+
+format-sql (Python library) (an alternative is [[https://github.com/ldeck/SqlBeautify][SQL-beautify]])
+
+$ sudo pip install format-sql
+
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'sql-mode-hook
+            '(lambda ()
+               (local-set-key (kbd "C-M-]") 'format-sql-region)))
+#+END_SRC
+
+  # ;; (defun format-sql-region-or-buffer ()
+  # ;;   "Format SQL for the entire buffer or the marked region"
+  # ;;   (interactive)
+  # ;;   (if (use-region-p)
+  # ;;       (format-sql-bf--apply-executable-to-buffer "format-sql"
+  # ;;                                                  'format-sql--call-executable
+  # ;;                                                  t
+  # ;;                                                  (get-file-type)))
+  # ;;   (format-sql-bf--apply-executable-to-buffer "format-sql"
+  # ;;                                              'format-sql--call-executable
+  # ;;                                              nil
+  # ;;                                              (get-file-type)))
+
+# If only one server:
+
+# #+BEGIN_SRC emacs-lisp
+#   ;; (setq sql-postgres-login-params
+#   ;;       '((server :default "localhost")
+#   ;;         (port :default 5432)
+#   ;;         (user :default "postgres")
+#   ;;         (database :default "postgres")))
+# #+END_SRC
+  
+# If several servers
+
+# #+BEGIN_SRC emacs-lisp
+#   ;; (setq sql-connection-alist
+#   ;;       '((server1 (sql-product 'postgres)
+#   ;;                  (sql-server "localhost")
+#   ;;                  (sql-port 5432)
+#   ;;                  (sql-user "user")
+#   ;;                  (sql-password "password")
+#   ;;                  (sql-database "db1"))
+#   ;;         (server2 (sql-product 'postgres)
+#   ;;                  (sql-server "localhost")
+#   ;;                  (sql-port 5432)
+#   ;;                  (sql-user "user")
+#   ;;                  (sql-password "password")
+#   ;;                  (sql-database "db2"))))
+# #+END_SRC
+
+No line truncate in results:
+
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'sql-interactive-mode-hook
+            (lambda ()
+              (toggle-truncate-lines t))) 
+#+END_SRC
+
+When using sql-send-region to execute a query in a SQLi buffer, the table formatting is off because the column names are printed on the same row as the the prompt. By adding a newline before the comint output we can make sure everything lines up nice. This will add a preceding newline to every comint output, even queries run at the prompt - though the extra line isn’t too noticeable.
+
+#+BEGIN_SRC emacs-lisp
+  (defvar sql-last-prompt-pos 1
+    "position of last prompt when added recording started")
+  (make-variable-buffer-local 'sql-last-prompt-pos)
+  (put 'sql-last-prompt-pos 'permanent-local t)
+  
+  (defun sql-add-newline-first (output)
+    "Add newline to beginning of OUTPUT for `comint-preoutput-filter-functions'
+    This fixes up the display of queries sent to the inferior buffer
+    programatically."
+    (let ((begin-of-prompt
+           (or (and comint-last-prompt-overlay
+                    ;; sometimes this overlay is not on prompt
+                    (save-excursion
+                      (goto-char (overlay-start comint-last-prompt-overlay))
+                      (looking-at-p comint-prompt-regexp)
+                      (point)))
+               1)))
+      (if (> begin-of-prompt sql-last-prompt-pos)
+          (progn
+            (setq sql-last-prompt-pos begin-of-prompt)
+            (concat "\n" output))
+        output)))
+  
+  (defun sqli-add-hooks ()
+    "Add hooks to `sql-interactive-mode-hook'."
+    (add-hook 'comint-preoutput-filter-functions
+              'sql-add-newline-first))
+  
+  (add-hook 'sql-interactive-mode-hook 'sqli-add-hooks)
+#+END_SRC
 
 
 
